assets/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --bg: rgb(115, 112, 132);
}

body {
    background-color: #000000;
    color: #FFF;
    margin: 20px;
    font-family: Arial, Helvetica, sans-serif;
}

header {
    background-color: var(--bg);
    align-items: center;
}

header h1 {
    margin-left: 20px;
}

.row {
    display: flex;
}

.col {
    flex: 1 0 0%;
}

.nav {
    justify-content: flex-end;
    align-items: center;
}

.nav .col {
    flex-grow: 0;
    padding: 1rem;
}

.nav a:hover {
    background-color: black;
    color: #FFF;
}

.hero {
    height: 400px;
    width: 100%;
    background-image: url("./hero_image.JPG");
    background-size: cover;
    background-position: top;
}

main {
    padding: 10px;
}

.main-margins {
    padding: 10px;
    margin-left: 20px;
    margin-right: 20px;
}

.p-position {
    position: relative;
    left: 40px;
}

.content {
    background-color: var(--bg);
    border: 3px solid white;
    border-radius: 5px;
}

